<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="@dimen/ivImageItem_width"
        android:layout_height="@dimen/ivImageItem_height"
        android:contentDescription="@string/item_image_cont_descr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|left"
        android:text="@string/tvPrimary_def_text"
        android:layout_marginTop="@dimen/tvPrimary_marginTop"
        android:textSize="@dimen/tvPrimary_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSecondary"
        android:layout_width="@dimen/tvSecondary_width"
        android:layout_height="wrap_content"
        android:text="@string/tvSecondary_def_text"
        android:textSize="@dimen/tvSecondary_textSize"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toBottomOf="@+id/tvPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>